feat: made migrations; db interaction
